# SIGMOD2022_HET-GMP

./: .gitignore  CMakeLists.txt
examples/models/: load_data_single.py
hetuCTR/csrc/: CMakeLists.txt
hetuCTR/csrc/partition/: inc_partition.cc  inc_partition.h  multi_partition.cc  multi_partition.h  partition.cc  partition.h  pybind.cc
hetuCTR/experimental/: partition.py
src/: CMakeLists.txt
